# vtms

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.ota  Dockerfile.ota.dockerignore  Dockerfile.web  Makefile  README.md  client.py  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run_tests.py  server.py  server.yaml  test.py  test_standalone.py
.github/workflows/: ci.yml  docker-publish.yml
.opencode/plans/: 2026-03-20-config-panel-design.md  (+4 more)
arduino/: README.md  led.cpp  temp.cpp  thermoprobe.cpp  wheel.cpp
client/: Dockerfile  README.md  pyproject.toml
client/src/vtms_client/: __init__.py  __main__.py  config.py  mqtt_handlers.py
client/tests/: README.md  conftest.py  test_client.py  test_config.py  test_diagram.py  test_gps_service.py  test_integration.py  test_mqtt_handlers.py  test_mqtt_transport.py  test_myobd.py  test_obd_service.py
deploy/: README.md  ansible.cfg  docker-compose.base-pi.yml  docker-compose.car-pi.yml  inventory.yml
ingest/: pyproject.toml
ingest/src/vtms_ingest/: config.py  server.py
ota/: README.md  server.py
sdr/: .coverage  .gitignore  Dockerfile  README.md  presets.yaml  presets.yaml.example  pyproject.toml
sdr/docs/plans/: 2026-03-07-live-audio-monitor-design.md  2026-03-09-codebase-improvements.md  2026-03-10-scan-recommend-design.md  2026-03-10-scan-recommend-plan.md  2026-03-18-autotune-design.md  2026-03-18-web-ui-design.md  2026-03-18-web-ui-plan.md  2026-03-22-dcs-multi-freq-plan.md
sdr/src/vtms_sdr/: audio_ws.py  autotune.py  cli.py  dcs.py  mqtt_bridge.py  presets.py  recorder.py  session.py  state.py
sdr/src/vtms_sdr.egg-info/: PKG-INFO  entry_points.txt  requires.txt
sdr/tests/: conftest.py  test_audio_ws.py  test_channel.py  test_channelizer.py  test_dcs.py  test_demod.py  test_monitor_ui.py  test_mqtt_bridge.py  test_presets.py  test_recorder.py  test_scanner.py  test_session_mqtt.py  test_state.py  test_utils.py
server/: README.md  package-lock.json  package.json
src/: config.py  db.py  gps_service.py  led.py  mqtt_handlers.py  mqtt_transport.py  myobd.py  obd_service.py
tests/: README.md  __init__.py  conftest.py  test_autotune.py  test_cli.py  test_client.py  test_config.py  test_demod.py  test_diagram.py  test_gps_service.py  test_integration.py  test_monitor.py  test_mqtt_handlers.py  test_mqtt_transport.py  test_myobd.py  test_obd_service.py  test_presets.py  test_recorder.py  test_sdr.py  test_session.py  test_transcriber.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts
web/src/: App.css  (+1 more)
(+124 files in other folders)
