[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vtms-ingest"
version = "0.1.0"
description = "VTMS MQTT → PostgreSQL telemetry ingest server"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "paho-mqtt",
    "psycopg2-binary",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]

[project.scripts]
vtms-ingest = "vtms_ingest.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
python-preference = "system"
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
